Fixed font size on mobile

--- a/style.css
+++ b/style.css
@@ -165,6 +165,10 @@ h1 {
     .main {
         max-height: 500px;
     }
+    h1 {
+        line-height: 2.2rem;
+        font-size: 1.8rem;
+    }
     #blobSvg0 {
         left: -5%;
         top: -25%;
